--- a/TodoListApp/app/src/main/res/layout/fragment_main.xml
+++ b/TodoListApp/app/src/main/res/layout/fragment_main.xml
@@ -9,16 +9,16 @@
     tools:context=".MainActivity$PlaceholderFragment">
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/todo_data"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:hint="@string/todo_item"
         android:layout_alignParentStart="true"
-        android:layout_toLeftOf="@+id/button"
-        android:layout_toStartOf="@+id/button"
-        android:layout_alignBottom="@+id/button" />
+        android:layout_toLeftOf="@+id/btn_add"
+        android:layout_toStartOf="@+id/btn_add"
+        android:layout_alignBottom="@+id/btn_add" />
 
     <Button
         style="?android:attr/buttonStyleSmall"
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:text="@string/label_add"
         android:padding="4dp"
-        android:id="@+id/button"
+        android:id="@+id/btn_add"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
