--- a/TodoListApp/app/src/main/res/layout/fragment_main.xml
+++ b/TodoListApp/app/src/main/res/layout/fragment_main.xml
@@ -31,4 +31,12 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/todo_list"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/todo_data" />
+
 </RelativeLayout>
