--- a/TodoListApp/app/src/main/res/layout/fragment_main.xml
+++ b/TodoListApp/app/src/main/res/layout/fragment_main.xml
@@ -35,6 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/todo_list"
+        android:padding="5dp"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
         android:layout_below="@+id/todo_data" />
